# athas

./: package.json
crates/version-control/src/git/: diff.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/commands/ui/: theme.rs
src/features/ai/services/providers/: anthropic-provider.ts
