[package]
name = "athas"
version = "0.4.6"
description = "Athas code editor"
authors = ["you"]
edition = "2024"

[lints]
workspace = true

[lib]
name = "athas_text_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4.41", features = ["serde"] }
colored = "3.0.0"
crossbeam-channel = "0.5"
dirs = "5.0"
ec4rs = "1.2"
env_logger = "0.11.8"
futures-util = "0.3"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
athas-runtime = { path = "../crates/runtime" }
athas-tooling = { path = "../crates/tooling" }
athas-lsp = { path = "../crates/lsp" }
athas-remote = { path = "../crates/remote" }
athas-project = { path = "../crates/project" }
athas-database = { path = "../crates/database" }
athas-version-control = { path = "../crates/version-control" }
athas-extensions = { path = "../crates/extensions" }
athas-terminal = { path = "../crates/terminal" }
athas-ai = { path = "../crates/ai" }
athas-github = { path = "../crates/github" }
mimalloc = { version = "0.1", default-features = false }
log = "0.4.27"
lsp-types = { version = "0.95", features = ["proposed"] }
portable-pty = "0.9"
regex = "1.10"
reqwest = "0.12"
mongodb = "3.5.1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
duckdb = { version = "1.4.4", features = ["bundled"] }
sha256 = "1.5"
tar = "0.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0"
keyring = "3.6.3"
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "mysql",
] }
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "unstable", "test"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
unicode-width = "0.2.1"
url = "2.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
vt100 = "0.15"
walkdir = "2.5.0"
which = "7.0"
zip = "2.2"
window-vibrancy = "0.6.0"
tempfile = "3.20.0"
fontdb = "0.23.0"
nucleo = "0.5.0"
nucleo-matcher = "0.3.1"
toml = "0.8"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
agent-client-protocol = "0.9"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
rand = "0.8.5"
objc = "0.2"
